--- a/CPP/.vscode/tasks.json
+++ b/CPP/.vscode/tasks.json
@@ -6,7 +6,7 @@
 		{
 			"label": "Run",
 			"type": "shell",
-			"command": "c++",
+			"command": "clang++",
 			"args": [
 				"${file}",
 				"-std=c++17",
